@@ -30,6 +30,7 @@ $ -> Language fix or change
  3-Aug-2010 Jean-Marie Simonet
  $ Adding missing strings, deleting redundant ones for com_contact.
  $ Adding/normalizing some .sys.ini strings/values com_user, com_weblinks
+ # [#21706] Modifying [#21159] to let cat have the same name/alias when not in same tree when save&copy
  
 03-Aug-2010 Andrew Eddie
  # Fixed issue [#21346] Error in loading order of JS scripts in components (g p).
